fix: remove vertical overflow caused by the home page

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .container{
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
     background-color: #1C1D1F;
     position: relative;
