--- a/src/Pages/HomeScreen/Home.css
+++ b/src/Pages/HomeScreen/Home.css
@@ -1,6 +1,6 @@
 .container-home{
     width: 100%;
-    height: 93vh;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     align-items: center;
